# Fleasion

./: .gitattributes  .gitignore  Fleasion.spec  FleasionDarwinProxyHelper.spec  FleasionLinuxProxyHelper.spec  FleasionProxyHelper.spec  README.md  handoff.md  launcher.py  pyproject.toml  report.md
.github/workflows/: build.yml  draft-release.yml
scripts/: build_macos.sh  clear_first_time_setup.py  upload_to_gofile.sh
src/Fleasion/: app.py  linux_proxy_helper_daemon.py  tray.py  version.py
src/Fleasion/cache/: __init__.py  animation_viewer.py  asset_type_filter.py  audio_player.py  cache_json_viewer.py  cache_manager.py  cache_viewer.py  fps_controls.py  mesh_processing.py  rbxm_parser.py  rbxm_preview.py
src/Fleasion/config/: manager.py
src/Fleasion/gui/: json_viewer.py  logs.py  rando_stuff_tab.py  replacer_config.py  settings_tab.py
src/Fleasion/modifications/: fflag_manager.py  font_utils.py  manager.py  platform_targets.py
src/Fleasion/proxy/: master.py  server.py  windows_proxy.py
src/Fleasion/utils/: __init__.py  anim_converter.py  certs.py  clipboard.py  desktop_integration.py  linux_proxy_helper.py  logging.py  metadata.py  paths.py  platform_linux.py  platform_windows.py  r15_to_r6.py  rig_data.py  updater.py
src/fleasion/: __init__.py  app.py  linux_proxy_helper_daemon.py  macos_proxy_helper_daemon.py
src/fleasion/cache/: cache_json_viewer.py  cache_manager.py  cache_viewer.py  font_viewer.py  obj_viewer.py  rbxm_preview.py  roblox_document.py
src/fleasion/config/: manager.py
src/fleasion/gui/: about.py  delete_cache.py  json_viewer.py  logs.py  modifications_tab.py  prejsons_dialog.py  proxy_gate.py  rando_stuff_tab.py  replacer_config.py  settings_tab.py  subplace_joiner_tab.py  theme.py  windows_hotkeys.py
src/fleasion/modifications/: __init__.py  fflag_profiles.py  global_settings_manager.py  manager.py
src/fleasion/prejsons/: downloader.py
src/fleasion/proxy/: master.py  server.py  upstream.py
src/fleasion/scripts/: __init__.py  _logger.py  _macos_build.py  _pyinstaller.py  build.py  macos_build.py
src/fleasion/utils/: __init__.py  autostart.py  http.py  (+13 more)
tests/: test_account_cookie_storage.py  test_app_single_instance.py  test_audio_player.py  test_autostart.py  test_build_command.py  test_build_macos_script.py  test_build_script.py  test_cache_manager_export.py  test_cache_scraper_places.py  test_cache_viewer_metadata.py  test_category_filter_popup.py  test_column_visibility_menu.py  test_config_manager.py  test_csg_mesh.py  test_custom_fflags.py  test_desktop_integration.py  test_fflag_browser.py  test_fflag_profiles.py  test_file_drop.py  test_global_settings_manager.py  test_http.py  test_linux_desktop_install.py  test_linux_proxy_helper.py  test_linux_proxy_helper_daemon.py  test_logging.py  test_macos_proxy_helper.py  test_mesh_processing.py  test_modifications_manager.py  test_obj_viewer.py  test_paths.py  test_platform_linux.py  test_platform_macos.py  test_platform_targets.py  test_platform_windows.py  test_proxy_certificate_coverage.py  test_proxy_gate.py  test_proxy_hosts_parent.py  test_proxy_macos_startup.py  test_proxy_server.py  test_proxy_upstream_resolution.py  (+13 more)
(+23 files in other folders)
