[build-system]
requires = ['uv_build>=0.11.0,<0.12.0']
build-backend = 'uv_build'

[project]
name = 'Fleasion'
version = "2.3.0"
description = 'Roblox asset interceptor and replacer with PyQt6 GUI'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'browser-cookie3>=0.20.1; sys_platform == "darwin" or sys_platform == "linux"',
    'cryptography>=42.0.0,<49; sys_platform == "darwin"',
    'cryptography>=49; sys_platform != "darwin"',
    'win11toast>=0.36.3; sys_platform == "win32"',
    'pywin32>=307; sys_platform == "win32"',
    'pyqt6==6.7.1; sys_platform == "darwin"',
    'pyqt6-qt6==6.7.3; sys_platform == "darwin"',
    'pyqt6>=6.8.0; sys_platform != "darwin"',
    'python-dateutil>=2.9.0',
    'platformdirs>=4.0.0',
    'sounddevice>=0.5.3',
    'soundfile>=0.13.1',
    'zstandard>=0.21.0',
    'certifi>=2024.7.4',
    'requests>=2.32.0',
    'colorama>=0.4.6',
    'pyopengl>=3.1.0',
    'pillow>=11.0.0',
    'DracoPy>=1.3.0',
    'orjson>=3.9.0',
    'numpy>=2.0.0',
    'lz4>=4.4.5',
]

[project.scripts]
fleasion = 'fleasion:main'
app = 'fleasion:main'
build = 'fleasion.scripts.build:main'

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.0",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
preview = true

# For now, disable all rules
select = []

# This is a rough set of rules we would like to eventually use
ignore = [
    "E501",
    "T201",
    "EXE002",
    "ANN204",
    "RUF006",
    "RUF029",
    "S404",
    "S602",
    # "TC001",  # False positives with pydantic
    # "TC002",  # False positives with pydantic
    # "TC003",  # False positives with pydantic
    "TD003",
    "FIX002",
    "W293",
    "E303",
    "G004",
    "ERA",
    "ANN201",
    "ANN202",
    "RET503",
    "EM101",
    "FBT001",
    "FBT002",
    "C901",
    "PLR0914",
    "PLR0915",
    "PLR0904",

    # Umbra preset
    "ANN401",
    "ASYNC109",
    "COM812",
    "CPY001",
    "D",        # not needed here
    "DOC",
    "INP001",   # due to how I load modules this results in annoyances
    "PD011",    # this is not a numpy codebase
    "PERF203",
    "PLC0414",  # pyright ruling for `as` imports needed
    "PLR0912",
    "PLR0913",
    "PLR2004",  # I hate this rule
    "PLR6301",
    "Q000",
    "RUF001",
    "RUF009",
    "SIM105",
    "TRY003",   # over-eager rule
    "TRY301",   # unrealistic rule
    "UP034",
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don"t delete commented out code
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
